
  * New upstream version
    + SURFRAW_graphical_remote defaults to off, as chromium
      doesn't support '-remote openURL()' (Closes: #628683).
  * Move opensearch elvi to main surfraw package.
    It now has an optional mode that uses a redirector
    if the dependencies are not installed.
  * debian/rules:
    + hardcode AWK as awk (Closes: #608967).
    + use dh_prep instead of dh_clean -k.
  * debian/control:
    + Build-Depends: bump debhelper dependency to (>= 7).
    + Standards-Version: 3.9.2.
    + surfraw-extra: convert Conflicts: to Breaks:.
    + surfraw:
      * Breaks: surfraw-extra (<= 2.2.7-1)
        as we have taken over /usr/lib/surfraw/opensearch.
      * Recommends: surfraw-extra: add version of (>> 2.2.7-1).
      * Tweak Description.
  * debian/source/format: explicitly specify 1.0 source format.

 -- Ian Beckwith <ianb@debian.org>  Tue, 12 Jul 2011 00:46:17 +0100

surfraw (2.2.7-1) unstable; urgency=low

  * New upstream version.
    + fixed imdb elvi (Closes: #577263).
  * Standards-Version: 3.8.4 (no changes).
  * Add ${misc:Depends} to dependencies.

 -- Ian Beckwith <ianb@debian.org>  Fri, 16 Apr 2010 20:43:27 +0100

surfraw (2.2.6-1) unstable; urgency=low

  * New upstream version.
    + Only use first matching bookmark (Closes: #530786).
    + Fix debsec (patch from Moritz Muehlenhoff) (Closes: #550741).
  * Remove Moritz from Uploaders (per #550741), thanks for your work!.
  * debian/rules: call dh_installexamples to install examples/ dir.
  * debian/control:
    + update vcs- fields to point to new git repo.
    + Standards-Version: 3.8.3 (No changes).
    + add Recommends: curl | wget | libwww-perl for -o.
    + Remove Conflicts/Replaces: surfaw, this transition was complete
      many releases ago.

 -- Ian Beckwith <ianb@debian.org>  Fri, 20 Nov 2009 03:34:34 +0000

surfraw (2.2.5-1) unstable; urgency=low

  * New upstream version.
  * Removed Thomas Smith from Uploaders (Closes: #519378).
    Thanks for your work!.